2012-06-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: added the lost
	semicolons in some standments.
	
	* godmode/reporting/visual_console_builder.php: restore the search
	modules without entities, because there was a bug into the recon
	server that recode two times the name, now run all parts fine.

2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/estado_agente.php: Improved
	performance using new functions.
	
2012-06-12 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Fixed some errors with tree view
	for policies.

2012-06-12 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_forecast.php
	 include/functions_reporting.php
	 include/functions_ui.php
	 godmode/reporting/reporting_builder.list_items.php
	 godmode/reporting/reporting_builder.php
	 godmode/reporting/reporting_builder.item_editor.php: Several fixes
	 in reports with metaconsole and fixes in forecast reports.

2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php: cleaned source
	code style.
	
	MERGED FROM TRUNK

2012-06-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_io.php: fixed the function "io_safe_output" for
	arrays, now into the function call other function with the name
	"io_safe_output_array".
	
	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php,
	godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.elements.php,
	godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/visual_console_builder.constans.php: fixed a lot
	of things about simple value and derivates.

2012-06-11 Dario Rodriguez <dario.rodriguez@artica.es>

	* operatoin/tree.php: Deleted debug trace, sorry ;)
